--- a/courses/calc 1/a1_calc1.html
+++ b/courses/calc 1/a1_calc1.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>K.A.HALLEY</title>
     <link rel="stylesheet" href="styles.css" />
+    <script>
+      window.MathJax = {
+        tex: {
+          inlineMath: [['$', '$']],
+          displayMath: [['$$', '$$']]
+        }
+      };
+    </script>
+    <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Neue+Montreal:wght@400;700&family=Voyage:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.gif" type="image/gif">
@@ -63,9 +72,26 @@
           <!-- Homework Box 1 -->
           <a href="#" class="homework-box1">
             <div class="homework-content">
-              <h2>#3</h2>
-              <p></p>
+              <h2>#3<br>The graph of a function f is given.<br>
+                (a) State the value of $f(1)$.<br>
+                (b) Estimate the value of $f(-1)$.<br>
+                (c) For what values of x is $f(x)=1$?<br>
+                (d) Estimate the value of x such that $f(x)=0$.<br>
+                (e) State the domain and range of $f$.<br>
+                (f) On what interval is $f$ increasing?</h2>
+              <p>(a) $f(1) = 3$<br>
+                (b) $f(-1) \approx -0.9$<br>
+                (c) $f(x) = 1$ => $x = 0 \text{ or } x = 3$<br>
+                (d) $f(x) = 0$ => $x \approx -0.53$<br>
+                (e) Domain: $[-2, 3]$, Range: $[-1, 3]$<br>
+                (f) $f$ is increasing on $[-2, 1]$<br>
+                <p>
             </div>
+            <div class="homework-content">
+              <h2>test</h2>
+              <p>test #2</p>
+            </div>
+
           </a>
 
         
