adding cisc 215. fixing assignments page

--- a/courses/C_arch/CarchAssignments.html
+++ b/courses/C_arch/CarchAssignments.html
@@ -16,16 +16,16 @@
       <div class="nav-container">
         <div class="nav">
           <div class="nav-logo nav-item">
-            <a href="../index.html">K.A.HALLEY</a>
+            <a href="../../index.html">K.A.HALLEY</a>
           </div>
            <div class="nav-links nav-item">
-            <a href="../assignments/assignments.html">Assignments</a>
+            <a href="../../assignments/assignments.html">Assignments</a>
             <a href="#"></a>
             <a href="#"></a>
-            <a href="../courses/courses.html">Courses</a>
+            <a href="../../courses/courses.html">Courses</a>
           </div>
           <div class="nav-cta nav-item">
-            <a href="../about/about.html">About</a>
+            <a href="../../about/about.html">About</a>
           </div>
         </div>
       </div>
@@ -57,31 +57,18 @@
       </div>
 
       <section class="homework-section">
-        <h1>Courses</h1>
+        <h1>COMPUTER ARCHITECTURE ASSIGNMENTS</h1>
         <div class="homework-container">
           
           <!-- Homework Box 1 -->
-          <a href="C_arch/CarchAssignments.html" class="homework-box">
+          <a href="a2_arch.html" class="homework-box">
             <div class="homework-content">
-              <h2>CISC 215-01</h2>
-              <p>Computer Architecture WI 2025</p>
+              <h2>Assignment 2</h2>
+              <p>CISC 215-01 Computer Architecture WI 2025 </p>
             </div>
           </a>
 
-          <!-- Homework Box 2 -->
-          <a href="#" class="homework-box">
-            <div class="homework-content">
-              <h2>MATH 120-01</h2>
-              <p>Discrete Mathamatics WI 2025</p>
-            </div>
-          </a>
-
-          <a href="../courses/calc 1/calc1.html" class="homework-box">
-            <div class="homework-content">
-              <h2>MATH 125-01</h2>
-              <p>Calculus 1 WI 2025</p>
-            </div>
-          </a>
+        
         </section>
 
       <script>
