git test for linux
this is just to make sure my linux distribution works properly with git

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="hero-container">
         <div class="hero">
           <h1>*Assignments<br />Made <br />Simple</h1>
-          <a href="courses/courses.html" class="button-link">Enter</a>
+          <a href="courses/courses.html" class="button-link">Enter!</a>
           <!-- <p>
            A portal for all my assignments done at the Antigua and Barbuda International Institute of Technology.
           </p> -->
