--- a/courses/calc 1/a1_calc1.html
+++ b/courses/calc 1/a1_calc1.html
@@ -32,7 +32,7 @@
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"
     ></script>
 
-    <!-- GSAP (placed in head for convenience, can also be in body) -->
+    <!-- GSAP -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
       defer
@@ -188,6 +188,7 @@
             <p>ANS: </p>
           </div>
         </div>
+
       </div>
     </section>
 
