--- a/courses/calc 1/calc1.html
+++ b/courses/calc 1/calc1.html
@@ -61,7 +61,7 @@
         <div class="homework-container">
           
           <!-- Homework Box 1 -->
-          <a href="a1_calc1.html" class="homework-box">
+          <a href="a1_calc1.html" class="homework-box1">
             <div class="homework-content">
               <h2>Assignment 1</h2>
               <p>CISC 125-01 Calculus1 WI 2025</p>
