--- a/courses/calc 1/a1_calc1.html
+++ b/courses/calc 1/a1_calc1.html
@@ -182,6 +182,33 @@
 
         <div class="homework-box1">
           <div class="homework-content">
+            <p>#32 Find the domain of the function. <br><br>
+            </p>
+            <p> $f(x) = \frac{2x^3 - 5}{x^2 + x - 6}$<br>
+              $x^2 + x - 6 = (x + 3)(x - 2)$<br>
+              $(x + 3)(x - 2) = 0$ ⇒ $x = -3$ or $x = 2$<br>
+              $(-\infty,\,-3)\cup(-3,\,2)\cup(2,\,\infty)$
+            </p>
+          </div>
+        </div>
+
+        <div class="homework-box1">
+          <div class="homework-content">
+            <p>#43 Evaluate f(-3), f(0), and f(2) for the piecewise defined
+              function. Then sketch the graph of the function.<br>
+              content
+            </p>
+            <p>$f(x)= \begin{cases}
+              x+1 & \text{if} x \ge -1 
+              x^2 & \text{if} x \gt -1
+              \end{case}$
+
+            </p>
+          </div>
+        </div>
+
+        <div class="homework-box1">
+          <div class="homework-content">
             <p># <br>
               content
             </p>
