Discrete math quiz 1
god knows if this works. i'm NOT fixing it.

--- a/courses/calc 1/a1_calc1.html
+++ b/courses/calc 1/a1_calc1.html
@@ -201,7 +201,11 @@
             <p>$f(x)= \begin{cases}
               x+1 & \text{if} x \ge -1 
               x^2 & \text{if} x \gt -1
-              \end{case}$
+              \end{cases}$
+
+              $f(-3)$: since $ -3 \lt -1$, therefore $f(-3) is undefined.
+              
+              $f(0)$: 
 
             </p>
           </div>
