--- a/courses/courses.html
+++ b/courses/courses.html
@@ -69,7 +69,7 @@
           </a>
 
           <!-- Homework Box 2 -->
-          <a href="#" class="homework-box">
+          <a href="../courses/Diss_math/Q1_diss.html" class="homework-box">
             <div class="homework-content">
               <h2>MATH 120-01</h2>
               <p>Discrete Mathamatics WI 2025</p>
