--- a/courses/calc 1/a1_calc1.html
+++ b/courses/calc 1/a1_calc1.html
@@ -200,12 +200,10 @@
             </p>
             <img src="graph1_ass1.png" alt="Piecewise function">
               
-            <p>$$
-              f(x)= \begin{cases}
-              x+1 & \text{if} x \ge -1 
-              x^2 & \text{if} x \gt -1
-              \end{cases}
-              $$<br><br>
+            <p>
+             $f(x)= {x+1 & \text{if} x \ge -1 <br>
+              x^2 & \text{if} x \gt -1}$
+            <br><br>
 
               $f(-3)$: since $ -3 \lt -1$, therefore $f(-3)$ is undefined.<br><br>
               
