--- a/courses/calc 1/a1_calc1.html
+++ b/courses/calc 1/a1_calc1.html
@@ -201,7 +201,7 @@
             <img src="graph1_ass1.png" alt="Piecewise function">
               
             <p>
-             $f(x)= {x+1 & \text{if} x \ge -1$ <br>
+             $f(x)= {x+1$ & $\text{if} x \ge -1$ <br>
               $x^2$ and $\text{if} x \gt -1}$
             <br><br>
 
