--- a/courses/calc 1/a1_calc1.html
+++ b/courses/calc 1/a1_calc1.html
@@ -201,10 +201,10 @@
             <img src="graph1_ass1.png" alt="Piecewise function">
               
             <p>
-             $f(x)= {x+1  \text{if} x \ge -1 
+             $f(x)= {x+1  \text{if} x \ge -1}$
              </p>
              <p>
-              $x^2  \text{if} x \gt -1}$
+              ${x^2  \text{if} x \gt -1}$
             <br></p>
 
               $f(-3)$: since $ -3 \lt -1$, therefore $f(-3)$ is undefined.<br><br>
