--- a/courses/calc 1/a1_calc1.html
+++ b/courses/calc 1/a1_calc1.html
@@ -187,7 +187,7 @@
             <p> $f(x) = \frac{2x^3 - 5}{x^2 + x - 6}$<br>
               $x^2 + x - 6 = (x + 3)(x - 2)$<br>
               $(x + 3)(x - 2) = 0$ ⇒ $x = -3$ or $x = 2$<br>
-              $(-\infty,\,-3)\cup(-3,\,2)\cup(2,\,\infty)$
+              $(-\infty,\,-3)\cup(-3,\,2)\cup(2,\,\infty)$<br>
             </p>
           </div>
         </div>
@@ -286,11 +286,11 @@
         <div class="homework-box1">
           <div class="homework-content">
             <p>#13 <br>
-              If the recommended adult dosage for a drug is D (in mg),
-              then to determine the appropriate dosage c for a child of
-              age a, pharmacists use the equation c − 0.0417Dsa 1 1d.
-              Suppose the dosage for an adult is 200 mg.
-              (a) Find the slope of the graph of c. What does it represent?
+              If the recommended adult dosage for a drug is D (in mg),<br>
+              then to determine the appropriate dosage c for a child of<br>
+              age a, pharmacists use the equation c − 0.0417Dsa 1 1d.<br>
+              Suppose the dosage for an adult is 200 mg.<br>
+              (a) Find the slope of the graph of c. What does it represent?<br>
               (b) What is the dosage for a newborn?
             </p>
             <p>
