--- a/courses/calc 1/a2_calc1.html
+++ b/courses/calc 1/a2_calc1.html
@@ -96,8 +96,26 @@
         <div class="homework-box1">
           <div class="homework-content">
             <p>
-              #<br />
-              test
+              #3<br/>
+              The graph of  is given. Match each equation with its
+              graph and give reasons for your choices.
+            </p>
+            <p>
+              (a) $y = f(x - 4)$   - Graph 3  
+                  Reason: Shift right 4 units (same shape, moved right)
+
+              (b) $y = f(x) + 3$   - Graph 1  
+                  Reason: Shift up 3 units (same shape, moved up)
+
+              (c) $y = (1/3)f(x)$  - Graph 4  
+                  Reason: Vertical compression by 1/3 (flatter graph)
+
+              (d) $y = -f(x + 4)$  - Graph 2  
+                  Reason: Shift left 4 units and reflect over x-axis
+
+              (e) $y = 2f(x + 6)$  - Graph 5  
+                 Reason: Shift left 6 units and stretch vertically by 2
+
             </p>
           </div>
         </div>
