--- a/courses/calc 1/a2_calc1.html
+++ b/courses/calc 1/a2_calc1.html
@@ -90,7 +90,7 @@
 
     <!-- Homework Section -->
     <section class="homework-section">
-      <h1>ASSIGNMENT 1</h1>
+      <h1>ASSIGNMENT 2</h1>
       <div class="homework-container">
         <!-- Homework Box 1 -->
         <div class="homework-box1">
@@ -267,16 +267,6 @@
             </p>
           </div>
         </div>
-
-        <div class="homework-box1">
-          <div class="homework-content">
-            <p>#4(a) <br>
-              1. Multiply in the numerator: $x^{2n} \cdot x^{3n-1} = x^{2n+3n-1} = x^{5n-1}$<br>
-              2. Divide by $x^{n+2}$: $\frac{x^{5n-1}}{x^{n+2}} = x^{(5n-1)-(n+2)} = x^{5n-1-n-2} = x^{4n-3}$<br>
-              Final answer: $x^{4n-3}$
-            </p>
-          </div>
-        </div>
         
 
         <div class="homework-box1">
@@ -396,8 +386,8 @@
         <div class="homework-box1">
           <div class="homework-content">
             <p>#19 <br>
-               Given: $C=\frac{5}{9}(F-32)$<br>
-               Multiply by $\frac{9}{5}$: $F-32=\frac{9}{5}C$<br>
+                $C=\frac{5}{9}(F-32)$<br>
+                $\frac{9}{5}$: $F-32=\frac{9}{5}C$<br>
                Add 32: $F=\frac{9}{5}C+32$<br>
                Inverse function: $f^{-1}(C)=\frac{9}{5}C+32$<br>
                Domain of $f^{-1}$: Since $F\ge-459.67$ corresponds to $C\ge-273.15$, the domain is $C\ge-273.15$<br>
@@ -410,8 +400,8 @@
           <div class="homework-content">
             <p>#25 <br>
                 $y=\ln(x+3)$<br>
-               Exponentiate: $e^y=x+3$<br>
-               Solve for $x$: $x=e^y-3$<br>
+                $e^y=x+3$<br>
+               Solve for $x$: $x=e^y-3$<br><br>
                Switch $x$ and $y$: $y=e^x-3$<br>
                answer: $f^{-1}(x)=e^x-3$
                
@@ -447,7 +437,7 @@
               &emsp;$\log_8 60 - \log_8 3 - \log_8 5 = \log_8\left(\frac{60}{3\cdot5}\right) = \log_8\left(\frac{60}{15}\right) = \log_8 4$<br>
               &emsp;Since $8=2^3$ and $4=2^2$, we have<br>
               &emsp;$\log_8 4 = \frac{\log_2 4}{\log_2 8} = \frac{2}{3}$.<br><br>
-              Final answers: (a) $2$, (b) $\frac{2}{3}$.
+               answers: (a) $2$, (b) $\frac{2}{3}$.
             </p>
           </div>
         </div>
@@ -459,9 +449,9 @@
               &emsp;$\frac{1}{3}\ln(x+2)^3 = \ln\left[(x+2)^3\right]^{1/3} = \ln(x+2)$<br>
               bracket: <br>
               &emsp;$\frac{1}{2}\Bigl[\ln x-\ln(x^2+3x+2)^2\Bigr] = \ln\left(\frac{x}{(x^2+3x+2)^2}\right)^{1/2} = \ln\sqrt{\frac{x}{(x^2+3x+2)^2}}$<br>
-              Add terms: <br>
+              Adding terms: <br>
               &emsp;$\ln(x+2) + \ln\sqrt{\frac{x}{(x^2+3x+2)^2}} = \ln\Bigl[(x+2)\sqrt{\frac{x}{(x^2+3x+2)^2}}\Bigr]$<br>
-               Factor: $x^2+3x+2 = (x+1)(x+2)$, so $(x^2+3x+2)^2 = (x+1)^2(x+2)^2$<br>
+               Factorizing: $x^2+3x+2 = (x+1)(x+2)$, so $(x^2+3x+2)^2 = (x+1)^2(x+2)^2$<br>
                <br>
               &emsp;$(x+2)\sqrt{\frac{x}{(x+1)^2(x+2)^2}} = \frac{\sqrt{x}}{x+1}$<br>
                answer: $\ln\left(\frac{\sqrt{x}}{x+1}\right)$
