--- a/courses/calc 1/calc1.html
+++ b/courses/calc 1/calc1.html
@@ -61,6 +61,13 @@
         <div class="homework-container">
           
           <!-- Homework Box 1 -->
+          <a href="a3_calc1.html" class="homework-box">
+            <div class="homework-content">
+              <h2>  Assignment 3</h2>
+              <p>  CISC 125-01 Calculus1 WI 2025</p>
+            </div>
+          </a>
+
           <a href="a2_calc1.html" class="homework-box">
             <div class="homework-content">
               <h2>  Assignment 2</h2>
