--- a/about/about.html
+++ b/about/about.html
@@ -56,33 +56,8 @@
         </svg>
       </div>
 
-      <section class="homework-section">
-        <h1>Courses</h1>
-        <div class="homework-container">
-          
-          <!-- Homework Box 1 -->
-          <a href="#" class="homework-box">
-            <div class="homework-content">
-              <h2>CISC 215-01</h2>
-              <p>Computer Architecture WI 2025</p>
-            </div>
-          </a>
-
-          <!-- Homework Box 2 -->
-          <a href="#" class="homework-box">
-            <div class="homework-content">
-              <h2>MATH 120-01</h2>
-              <p>Discrete Mathamatics WI 2025</p>
-            </div>
-          </a>
-
-          <a href="#" class="homework-box">
-            <div class="homework-content">
-              <h2>MATH 125-01</h2>
-              <p>Calculus 1 WI 2025</p>
-            </div>
-          </a>
-        </section>
+      <iframe src="https://chromedino.com/" frameborder="0" scrolling="no" width="100%" height="100%" loading="lazy"></iframe>
+<style type="text/css">iframe { position: absolute; width: 100%; height: 100%; z-index: 999; }</style> 
 
       <script>
         gsap.from(".nav-container", 2, {
