--- a/about/about.html
+++ b/about/about.html
@@ -56,7 +56,7 @@
         </svg>
       </div>
 
-      <iframe src="https://chromedino.com/" frameborder="0" scrolling="no" width="100%" height="100%" loading="lazy"></iframe>
+      <iframe src="https://chromedino.com/" frameborder="0" scrolling="yes" width="100%" height="50%" loading="lazy"></iframe>
 <style type="text/css">iframe { position: absolute; width: 100%; height: 100%; z-index: 999; }</style> 
 
       <script>
